--- a/bank-terminal/package.json
+++ b/bank-terminal/package.json
@@ -13,7 +13,8 @@
     "flat-file-db": "^0.1.5",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "whatwg-fetch": "^0.9.0"
   },
   "description": "Hack the \"North Bank\"!",
   "main": "app.js",
