--- a/node4/makefile
+++ b/node4/makefile
@@ -1,5 +1,7 @@
-/usr/local/bin/securehash
+install: /usr/local/bin/securehash /home/wscott/secretkey
+
+/usr/local/bin/securehash:
 	cp a.out /usr/local/bin/securehash
 
-/home/wscott/secretkey
+/home/wscott/secretkey:
 	cp static /home/wscott/secretkey
