Fix makefile, again (sorry)

--- a/node4/makefile
+++ b/node4/makefile
@@ -4,4 +4,4 @@ install: /usr/local/bin/securehash /home/wscott/secretkey
 	cp a.out /usr/local/bin/securehash
 
 /home/wscott/secretkey:
-	cp static /home/wscott/secretkey
+	cp -r static /home/wscott/secretkey
